# BigAppLauncher

./: .gitignore  CLAUDE.md  CMakeLists.txt  SETUP.md  setup_deps.ps1
assets/lang/: en-US.json  zh-CN.json  zh-TW.json
assets/shaders/: BlurPS.hlsl  BlurVS.hlsl
docs/: NEXO_STYLE_GUIDE.md
src/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
src/core/: Config.cpp  Config.h  Logger.cpp  Logger.h
src/graphics/: BlurEffect.cpp  BlurEffect.h  DX11Context.cpp  DX11Context.h  TextureManager.cpp  TextureManager.h  VideoPlayer.cpp  VideoPlayer.h
src/i18n/: Localization.cpp  Localization.h
src/ui/: DebugController.cpp  DebugController.h  HUDOverlay.cpp  HUDOverlay.h  StyleUI.cpp  StyleUI.h  StyleUIWidgets.cpp  Theme.cpp  Theme.h  Widgets.cpp  Widgets.h
src/ui/screens/: GUIMenuScreen.cpp  GUIMenuScreen.h  LargeDemoScreen.cpp  LargeDemoScreen.h  LoginScreen.cpp  LoginScreen.h  ProductsScreen.cpp  ProductsScreen.h
